apps/base/snapcast/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: snapcast
  labels:
    app: snapcast
